--- a/config/database.yml
+++ b/config/database.yml
@@ -78,8 +78,10 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
+
 production:
   <<: *default
+  url: <%= ENV["DATABASE_URL"] %>
   database: mmp2b_production
   username: mmp2b
   password: <%= ENV['MMP2B_DATABASE_PASSWORD'] %>
