--- a/package.json
+++ b/package.json
@@ -2,22 +2,13 @@
   "name": "mmp2b",
   "private": true,
   "dependencies": {
-    "@babel/preset-react": "^7.0.0",
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.2",
     "autoprefixer": "^9.5.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "7.x",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "coffee-loader": "^0.9.0",
     "coffee-script": "^1.12.7",
-    "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
@@ -42,6 +33,15 @@
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.2.1"
+    "webpack-dev-server": "^3.2.1",
+    "@babel/preset-react": "^7.0.0",
+    "compression-webpack-plugin": "^2.0.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "7.x",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0"
   }
 }
