--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "eslint": "5.16.0",
+    "prettier": "1.16.4",
     "webpack-dev-server": "^3.2.1"
   }
 }
