--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
+    "getusermedia": "^2.0.1",
     "glob": "^7.1.3",
     "js-yaml": "^3.12.2",
     "node-sass": "^4.11.0",
