--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "file-loader": "^3.0.1",
     "getusermedia": "^2.0.1",
     "glob": "^7.1.3",
+    "jquery-placeholder": "^2.3.1",
     "js-yaml": "^3.12.2",
     "node-sass": "^4.11.0",
     "path-complete-extname": "^1.0.0",
