--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "coffee-script": "^1.12.7",
     "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^2.1.1",
+    "dotenv": "^7.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
     "getusermedia": "^2.0.1",
